--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web3",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://zulviaeggy.github.io/web-3",
+  "homepage": "https://zulviaeggy.github.io/web-eggy",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.8.1",
